external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_token_eof1.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/hexstring_token_eof1.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/hexstring_token_eof1.move:3:9
  │
3 │         x"
  │         ^^ Missing closing quote (") after byte string

